apps/freqtrade/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freqtrade
  namespace: freqtrade
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freqtrade
  template:
    metadata:
      labels:
        app: freqtrade
    spec:
      containers:
        - name: freqtrade
          image: freqtradeorg/freqtrade:stable
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /freqtrade/config.json
              subPath: config.json
            - name: data-volume
              mountPath: /freqtrade/user_data
            - name: strategies-volume
              mountPath: /freqtrade/user_data/strategies
      volumes:
        - name: config-volume
          configMap:
            name: freqtrade-config
        - name: data-volume
          persistentVolumeClaim:
            claimName: freqtrade-pvc
        - name: strategies-volume
          emptyDir: {}
        # - name: strategies-volume
        #   configMap:
        #     name: strategy
