apps/freqtrade/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freqtrade-service
  namespace: freqtrade
spec:
  selector:
    app: freqtrade
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
