apps/freqtrade/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freqtrade-ingress
  namespace: freqtrade
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: freqtrade.atoca.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freqtrade-service
                port:
                  number: 80
  tls:
    - hosts:
        - freqtrade.atoca.house
      secretName: freqtrade-tls
